layout/style/Declaration.cpp
@@ -1620,7 +1620,7 @@ Declaration::AppendPropertyAndValueToString(nsCSSPropertyID aProperty,
   else
     aResult.Append(aValue);
   if (GetPropertyIsImportantByID(aProperty)) {
-    aResult.AppendLiteral(" ! important");
+    aResult.AppendLiteral(" !important");
   }
   aResult.AppendLiteral("; ");
 }
@@ -1673,7 +1673,7 @@ Declaration::AppendVariableAndValueToString(const nsAString& aName,
   }
 
   if (important) {
-    aResult.AppendLiteral("! important");
+    aResult.AppendLiteral("!important");
   }
   aResult.AppendLiteral("; ");
 }
